// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShopItem on CartPage > renders an item with title, quantity, price, and remove button 1`] = `
<div>
  <div
    aria-label="shop item"
    class="_container_859760"
    role="figure"
  >
    <img
      class="_image_859760"
      src="url"
    />
    <p
      class="_title_859760"
    >
      title
    </p>
    <div
      class="_priceQuantityContainer_859760"
    >
      <p
        class="_price_859760"
      >
        $ 
        123
      </p>
      <label
        class="_quantityLabel_859760"
      >
        Qty:
        <p
          aria-label="quantity"
        >
          0
        </p>
        <div
          class="_quantityButtons_859760"
        >
          <button
            aria-label="increase quantity"
            class="_upArrow_859760"
          />
          <button
            aria-label="decrease quantity"
            class="_downArrow_859760"
          />
        </div>
      </label>
    </div>
    <button
      class="secondary-button"
    >
      Remove
    </button>
  </div>
</div>
`;

exports[`ShopItem on ShopPage > renders an item with title, description, quantity, price, and add to cart button 1`] = `
<div>
  <div
    aria-label="shop item"
    class="_container_859760"
    role="figure"
  >
    <img
      class="_image_859760"
      src="url"
    />
    <p
      class="_title_859760"
    >
      title
    </p>
    <p
      class="_description_859760"
    >
      description
    </p>
    <div
      class="_priceQuantityContainer_859760"
    >
      <p
        class="_price_859760"
      >
        $ 
        123
      </p>
      <label
        class="_quantityLabel_859760"
      >
        Qty:
        <p
          aria-label="quantity"
        >
          1
        </p>
        <div
          class="_quantityButtons_859760"
        >
          <button
            aria-label="increase quantity"
            class="_upArrow_859760"
          />
          <button
            aria-label="decrease quantity"
            class="_downArrow_859760"
          />
        </div>
      </label>
    </div>
    <button
      class="secondary-button"
    >
      Add to Cart
    </button>
  </div>
</div>
`;
